[gd_scene load_steps=22 format=3 uid="uid://c0ovgpk4u3s8"]

[ext_resource type="Script" path="res://Code/Door.gd" id="1_xsfud"]
[ext_resource type="Material" uid="uid://bnugivhrwp1wr" path="res://Materials/Wood.material" id="2_5rebt"]
[ext_resource type="PackedScene" uid="uid://cmy7b0shgb2cs" path="res://Objects/InteractArea.tscn" id="2_bmuoc"]
[ext_resource type="Texture2D" uid="uid://bs4wjua2s786c" path="res://Materials/Wood/Wood066_2K_Color.png" id="2_txiqw"]
[ext_resource type="Texture2D" uid="uid://rj00hj58hy00" path="res://Materials/Wood/Wood066_2K_NormalGL.png" id="4_txvt8"]
[ext_resource type="Texture2D" uid="uid://4ykjvvxnoiuo" path="res://Materials/Wood/Wood066_2K_Roughness.png" id="5_uqhnn"]
[ext_resource type="Texture2D" uid="uid://dg6akkbvvorbx" path="res://Materials/Metal/Metal046B_2K_Color.png" id="7_jsaiv"]
[ext_resource type="Texture2D" uid="uid://ld7xcajps6e7" path="res://Materials/Metal/Metal046B_2K_Metalness.png" id="9_es1pj"]
[ext_resource type="Texture2D" uid="uid://5f66t1kygab7" path="res://Materials/Metal/Metal046B_2K_NormalGL.png" id="10_7uv68"]
[ext_resource type="Texture2D" uid="uid://bs2uqdmnrnswa" path="res://Materials/Metal/Metal046B_2K_Roughness.png" id="11_b28iu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j7odr"]
albedo_color = Color(0.686275, 0.686275, 0.686275, 1)
albedo_texture = ExtResource("2_txiqw")
roughness_texture = ExtResource("5_uqhnn")
normal_enabled = true
normal_texture = ExtResource("4_txvt8")
heightmap_scale = 2.0
uv1_scale = Vector3(0.2, 0.2, 0.2)
uv1_triplanar = true

[sub_resource type="ArrayMesh" id="ArrayMesh_cusfx"]
_surfaces = [{
"aabb": AABB(-0.125, -0.0499997, -1.55, 0.25001, 5.10001, 3.10001),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 201, 160, 32, 60, 1, 33, 132, 60, 0, 33, 132, 60, 0, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 201, 160, 32, 60, 1, 33, 132, 60, 201, 160, 32, 60, 1, 33, 132, 60, 0, 0, 0, 0, 0, 0, 128, 63, 202, 160, 32, 60, 131, 16, 194, 62, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 202, 160, 32, 60, 248, 222, 123, 63, 202, 160, 32, 60, 131, 16, 194, 62, 0, 0, 0, 0, 0, 0, 128, 63, 202, 160, 32, 60, 248, 222, 123, 63, 202, 160, 32, 60, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 31, 30, 94, 63, 248, 222, 123, 63, 43, 216, 123, 63, 247, 222, 123, 63, 31, 30, 94, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 33, 132, 60, 0, 0, 128, 63, 0, 0, 0, 0, 70, 70, 6, 63, 240, 32, 132, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 70, 70, 6, 63, 240, 32, 132, 60, 70, 70, 6, 63, 240, 32, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 19, 33, 132, 60, 19, 33, 132, 60, 249, 222, 123, 63, 249, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 179, 160, 32, 60, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 179, 160, 32, 60, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 0, 0, 179, 160, 32, 60, 248, 222, 123, 63, 71, 161, 32, 60, 142, 16, 194, 62, 0, 33, 132, 60, 0, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 157, 161, 32, 60, 66, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 71, 161, 32, 60, 142, 16, 194, 62, 157, 161, 32, 60, 66, 33, 132, 60, 179, 160, 32, 60, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 30, 30, 94, 63, 248, 222, 123, 63, 249, 222, 123, 63, 249, 222, 123, 63, 30, 30, 94, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 248, 222, 123, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 33, 132, 60, 0, 0, 128, 63, 0, 0, 0, 0, 72, 70, 6, 63, 30, 33, 132, 60, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 70, 6, 63, 30, 33, 132, 60, 237, 32, 132, 60, 237, 32, 132, 60, 72, 70, 6, 63, 30, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 33, 132, 60, 0, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 33, 132, 60, 0, 0, 128, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 248, 222, 123, 63, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 33, 132, 60, 0, 0, 128, 63, 0, 33, 132, 60, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 32, 132, 60, 255, 32, 132, 60, 248, 222, 123, 63, 248, 222, 123, 63, 0, 0, 128, 63, 0, 0, 128, 63, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 248, 222, 123, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 192, 62, 0, 0, 32, 63, 0, 0, 32, 63, 255, 255, 191, 62, 255, 255, 191, 62, 0, 0, 32, 63, 0, 0, 32, 63, 1, 0, 32, 63, 105, 173, 53, 63, 2, 0, 192, 62, 2, 0, 192, 62, 2, 0, 192, 62, 2, 0, 192, 62, 1, 0, 32, 63, 105, 173, 53, 63, 0, 0, 192, 62, 130, 175, 56, 63, 191, 247, 30, 63, 135, 175, 56, 63, 1, 0, 32, 63, 105, 173, 53, 63, 1, 0, 32, 63, 135, 175, 56, 63, 1, 0, 32, 63, 105, 173, 53, 63, 191, 247, 30, 63, 135, 175, 56, 63, 0, 0, 192, 62, 130, 175, 56, 63, 255, 255, 191, 62, 0, 5, 151, 59, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 32, 63, 0, 0, 0, 0, 255, 255, 191, 62, 0, 5, 151, 59, 0, 0, 192, 62, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 0, 0, 0, 0, 32, 63, 0, 0, 32, 63, 255, 255, 191, 62, 0, 5, 151, 59, 1, 0, 32, 63, 255, 209, 126, 63, 0, 0, 32, 63, 0, 0, 128, 63, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 32, 63, 0, 0, 32, 63, 1, 0, 32, 63, 255, 209, 126, 63, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 192, 62, 1, 0, 32, 63, 255, 209, 126, 63, 0, 0, 192, 62, 0, 0, 128, 63, 0, 0, 192, 62, 58, 165, 148, 62, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 192, 62, 0, 0, 192, 62, 0, 0, 32, 63, 0, 0, 32, 63, 0, 0, 192, 62, 58, 165, 148, 62, 40, 0, 32, 63, 46, 161, 142, 62, 254, 255, 191, 62, 252, 160, 142, 62, 130, 16, 194, 62, 252, 160, 142, 62, 0, 0, 192, 62, 58, 165, 148, 62, 130, 16, 194, 62, 252, 160, 142, 62, 40, 0, 32, 63, 46, 161, 142, 62, 0, 0, 192, 62, 58, 165, 148, 62),
"format": 23,
"material": SubResource("StandardMaterial3D_j7odr"),
"primitive": 3,
"vertex_count": 156,
"vertex_data": PackedByteArray(0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 190, 247, 158, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 62, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 62, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 32, 63, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 76, 6, 61, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 0, 0, 32, 63, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 190, 247, 158, 64, 0, 0, 192, 63, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 64, 33, 4, 61, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 191, 255, 255, 255, 127, 255, 127, 254, 127, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 255, 255, 255, 0, 0, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 63, 255, 127, 255, 127, 0, 0, 255, 63, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 0, 0, 255, 127, 0, 128, 254, 127, 0, 0, 0, 190, 190, 247, 158, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 0, 0, 255, 127, 0, 128, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 32, 63, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 32, 63, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 63, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 190, 247, 158, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 0, 0, 255, 127, 255, 127, 254, 127, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 0, 0, 255, 127, 255, 127, 254, 127, 248, 189, 247, 189, 128, 204, 76, 189, 0, 0, 192, 63, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 63, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 0, 0, 255, 255, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 127, 0, 0, 0, 0, 0, 0, 248, 189, 247, 61, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 0, 0, 255, 255, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 63, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 63, 255, 127, 0, 0, 255, 255, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 63, 255, 127, 0, 0, 255, 255, 0, 0, 248, 189, 247, 189, 128, 204, 76, 189, 0, 0, 192, 63, 255, 127, 0, 0, 255, 255, 0, 0, 248, 189, 247, 61, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 191, 255, 127, 0, 0, 255, 255, 0, 0, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 62, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 190, 154, 153, 161, 64, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 190, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 62, 128, 204, 76, 189, 102, 102, 198, 191, 255, 255, 255, 255, 0, 0, 255, 63, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 62, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 190, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 62, 255, 127, 0, 0, 255, 255, 255, 255, 0, 0, 0, 190, 0, 0, 32, 63, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 248, 189, 247, 189, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 33, 4, 61, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 248, 189, 247, 189, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 190, 247, 158, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 32, 63, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 1, 0, 24, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 190, 247, 158, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 32, 63, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 62, 190, 247, 158, 64, 0, 0, 192, 63, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 0, 190, 190, 247, 158, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 190, 190, 247, 158, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 0, 0, 32, 63, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 62, 0, 0, 32, 63, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 190, 190, 247, 158, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 0, 0, 160, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 64, 33, 4, 61, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 0, 0, 32, 63, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 190, 0, 0, 24, 64, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 0, 0, 0, 62, 64, 33, 4, 61, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 62, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 255, 191, 248, 189, 247, 61, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 254, 191, 0, 0, 0, 62, 64, 33, 4, 61, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 248, 189, 247, 61, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 255, 127, 0, 0, 254, 191, 0, 0, 0, 190, 128, 204, 76, 189, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191, 0, 0, 0, 62, 64, 33, 4, 61, 0, 0, 192, 191, 255, 127, 255, 127, 1, 0, 254, 191)
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_dv11a"]
data = PackedVector3Array(0.125, 2.55, 1.55, 0.125, 2.55, -1.55, 0.125, 2.5, 1.5, 0.125, 2.4677, 1.5, 0.125, 2.55, 1.55, 0.125, 2.5, 1.5, 0.125, 2.55, -1.55, 0.125, -2.55, -1.55, 0.125, 2.5, -1.5, 0.125, 2.5, -1.5, 0.125, -2.55, -1.55, 0.125, -2.4677, -1.5, 0.125, 2.5, 1.5, 0.125, 2.55, -1.55, 0.125, 2.5, -1.5, 0.125, -2.55, -1.55, 0.125, -2.55, 1.55, 0.125, -2.5, -1.5, 0.125, -2.4677, -1.5, 0.125, -2.55, -1.55, 0.125, -2.5, -1.5, 0.125, -2.55, 1.55, 0.125, 2.55, 1.55, 0.125, -2.5, 1.5, 0.125, -2.5, 1.5, 0.125, 2.55, 1.55, 0.125, 2.4672, 1.5, 0.125, -2.5, -1.5, 0.125, -2.55, 1.55, 0.125, -2.5, 1.5, 0.125, 2.55, 1.55, -0.125, 2.55, 1.55, -0.125, 2.55, -1.55, -0.125, 2.55, -1.55, 0.125, 2.55, -1.55, 0.125, 2.55, 1.55, 0.125, 2.55, 1.55, 0.125, -2.55, 1.55, -0.125, -2.55, 1.55, -0.125, -2.55, 1.55, -0.125, 2.55, 1.55, 0.125, 2.55, 1.55, -0.125, 2.55, -1.55, -0.125, 2.55, 1.55, -0.125, 2.5, 1.5, -0.125, 2.55, 1.55, -0.125, -2.55, 1.55, -0.125, 2.5, 1.5, -0.125, 2.4677, -1.5, -0.125, 2.55, -1.55, -0.125, 2.5, -1.5, -0.125, 2.55, -1.55, -0.125, 2.5, 1.5, -0.125, 2.5, -1.5, -0.125, 2.5, 1.5, -0.125, -2.55, 1.55, -0.125, -2.4677, 1.5, -0.125, -2.55, 1.55, -0.125, -2.55, -1.55, -0.125, -2.5, 1.5, -0.125, -2.4677, 1.5, -0.125, -2.55, 1.55, -0.125, -2.5, 1.5, -0.125, -2.55, -1.55, -0.125, 2.55, -1.55, -0.125, -2.5, -1.5, -0.125, -2.5, -1.5, -0.125, 2.55, -1.55, -0.125, 2.4672, -1.5, -0.125, -2.5, 1.5, -0.125, -2.55, -1.55, -0.125, -2.5, -1.5, -0.125, -2.55, 1.55, 0.125, -2.55, 1.55, 0.125, -2.55, -1.55, 0.125, -2.55, -1.55, -0.125, -2.55, -1.55, -0.125, -2.55, 1.55, 0.125, -2.55, -1.55, 0.125, 2.55, -1.55, -0.125, 2.55, -1.55, -0.125, 2.55, -1.55, -0.125, -2.55, -1.55, 0.125, -2.55, -1.55, 0.125, 2.5, 1.5, -0.125, 2.5, -1.5, -0.125, 2.5, 1.5, -0.125, 2.5, -1.5, 0.125, 2.5, 1.5, 0.125, 2.5, -1.5, 0.125, 2.4677, 1.5, -0.125, -2.5, 1.5, 0.125, -2.5, 1.5, -0.125, -2.5, 1.5, 0.125, 2.4677, 1.5, 0.125, 2.5, 1.5, -0.125, -2.4677, 1.5, 0.125, 2.5, 1.5, -0.125, 2.5, 1.5, 0.125, 2.5, 1.5, -0.125, -2.4677, 1.5, -0.125, -2.5, 1.5, -0.125, -2.5, 1.5, 0.125, -2.5, -1.5, 0.125, -2.5, 1.5, 0.125, -2.5, -1.5, -0.125, -2.5, 1.5, -0.125, -2.5, -1.5, 0.125, -2.4677, -1.5, -0.125, 2.5, -1.5, 0.125, 2.5, -1.5, -0.125, 2.5, -1.5, 0.125, -2.4677, -1.5, 0.125, -2.5, -1.5, -0.125, 2.4677, -1.5, 0.125, -2.5, -1.5, -0.125, -2.5, -1.5, 0.125, -2.5, -1.5, -0.125, 2.4677, -1.5, -0.125, 2.5, -1.5)

[sub_resource type="BoxMesh" id="BoxMesh_86pw1"]
material = ExtResource("2_5rebt")
size = Vector3(0.1, 5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_k1oor"]
size = Vector3(0.1, 5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_g6lqw"]
size = Vector3(1, 5, 4)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m1a3a"]
albedo_texture = ExtResource("7_jsaiv")
metallic = 1.0
metallic_texture = ExtResource("9_es1pj")
roughness = 0.56
roughness_texture = ExtResource("11_b28iu")
normal_enabled = true
normal_texture = ExtResource("10_7uv68")

[sub_resource type="SphereMesh" id="SphereMesh_x08xv"]
material = SubResource("StandardMaterial3D_m1a3a")
radius = 0.15
height = 0.3

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fp7jb"]
properties/0/path = NodePath("door:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath("door:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("door:angular_velocity")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("door:linear_velocity")
properties/3/spawn = true
properties/3/sync = true

[sub_resource type="BoxShape3D" id="BoxShape3D_c3k85"]
size = Vector3(0.1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_r2f7n"]
size = Vector3(1, 1, 0.1)

[node name="DoorFrame" type="StaticBody3D"]
script = ExtResource("1_xsfud")

[node name="doorFrame" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_cusfx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("ConcavePolygonShape3D_dv11a")

[node name="HingeJoint3D" type="HingeJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3, 1.5)
node_a = NodePath("..")
node_b = NodePath("../door")
angular_limit/enable = true

[node name="door" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 3
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_86pw1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_k1oor")

[node name="interactArea" parent="door" instance=ExtResource("2_bmuoc")]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="door/interactArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_g6lqw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.4, -1.2)
mesh = SubResource("SphereMesh_x08xv")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.200001, -0.4, -1.2)
mesh = SubResource("SphereMesh_x08xv")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fp7jb")

[node name="Area3D3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -1.5)
collision_layer = 2
collision_mask = 2
gravity_point_center = Vector3(0, 0, 1)
gravity_direction = Vector3(0, 0, 1)
gravity = 4.9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D3"]
shape = SubResource("BoxShape3D_c3k85")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, 1.5)
collision_layer = 2
collision_mask = 2
gravity_space_override = 3
gravity_point_center = Vector3(0, 0, 1)
gravity_direction = Vector3(0, 0, 1)
gravity = 4.9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
shape = SubResource("BoxShape3D_r2f7n")

[connection signal="interacted" from="door/interactArea" to="." method="_on_interact_area_interacted"]
[connection signal="body_entered" from="Area3D3" to="." method="_on_area_3d_3_body_entered"]
[connection signal="body_entered" from="Area3D2" to="." method="_on_area_3d_2_body_entered"]
